src/main/java/com/nspm/antlr4/gen/com/nspm/antlr4/ABTParser.java
// Generated from /Users/chenpeiqi/courses/大三/大三下/实训/npsm/src/main/java/com/nspm/antlr4/ABT.g4 by ANTLR 4.8
package com.nspm.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ABTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, INTERFACE=90, ROUTEAGGREGATION=91, TETHERNET=92, METHERNET=93, 
		BLADE=94, REGEX_IP6=95, REGEX_IP_MASK=96, REGEX_IP_RANGE=97, REGEX_IP_ADDRESS=98, 
		REGEX_IP=99, INT=100, COMMENT=101, EOL=102, WS=103, CJK=104, Basic_Latin=105;
	public static final int
		RULE_config = 0, RULE_line = 1, RULE_commentLine = 2, RULE_blankLine = 3, 
		RULE_commandLine = 4, RULE_knownCommand = 5, RULE_unknownCommand = 6, 
		RULE_version = 7, RULE_hostname = 8, RULE_contextRule = 9, RULE_contextSubtree = 10, 
		RULE_interfaceRule = 11, RULE_interfaceSubtree = 12, RULE_interfaceRouteAggregationPriority = 13, 
		RULE_interfaceBridgeAggregation = 14, RULE_routeAggregationRule = 15, 
		RULE_routeAggregationRuleSubtree = 16, RULE_ethernetRule = 17, RULE_tethernetRuleSubtree = 18, 
		RULE_methernetRuleSubtree = 19, RULE_securityZoneRule = 20, RULE_securityZoneRuleSubtree = 21, 
		RULE_objectPolicyRule = 22, RULE_objectPolicyRuleSubtree = 23, RULE_zonePairRule = 24, 
		RULE_zonePairRuleSubtree = 25, RULE_lineRule = 26, RULE_lineRuleSubtree = 27, 
		RULE_routeRule = 28, RULE_snmpAgentRule = 29, RULE_redundancyRule = 30, 
		RULE_redundancyRuleSubtree = 31, RULE_redundancyNodeRuleSubtree = 32, 
		RULE_aclRule = 33, RULE_aclRuleSubtree = 34, RULE_source = 35, RULE_destination = 36, 
		RULE_roleRule = 37, RULE_roleRuleSubTree = 38, RULE_roleLevel = 39, RULE_userClassRule = 40, 
		RULE_userClassRuleSubTree = 41, RULE_sessionRule = 42, RULE_objectGroupRule = 43, 
		RULE_objectGroupSubTree = 44, RULE_ws = 45, RULE_eol = 46, RULE_word = 47, 
		RULE_description = 48, RULE_comment = 49, RULE_group = 50, RULE_protocal = 51, 
		RULE_service = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"config", "line", "commentLine", "blankLine", "commandLine", "knownCommand", 
			"unknownCommand", "version", "hostname", "contextRule", "contextSubtree", 
			"interfaceRule", "interfaceSubtree", "interfaceRouteAggregationPriority", 
			"interfaceBridgeAggregation", "routeAggregationRule", "routeAggregationRuleSubtree", 
			"ethernetRule", "tethernetRuleSubtree", "methernetRuleSubtree", "securityZoneRule", 
			"securityZoneRuleSubtree", "objectPolicyRule", "objectPolicyRuleSubtree", 
			"zonePairRule", "zonePairRuleSubtree", "lineRule", "lineRuleSubtree", 
			"routeRule", "snmpAgentRule", "redundancyRule", "redundancyRuleSubtree", 
			"redundancyNodeRuleSubtree", "aclRule", "aclRuleSubtree", "source", "destination", 
			"roleRule", "roleRuleSubTree", "roleLevel", "userClassRule", "userClassRuleSubTree", 
			"sessionRule", "objectGroupRule", "objectGroupSubTree", "ws", "eol", 
			"word", "description", "comment", "group", "protocal", "service"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'version'", "'sysname'", "'context'", "'id'", "'description'", 
			"'context start'", "'location'", "'blade-controller-team'", "'allocate'", 
			"'interface'", "'share'", "'to'", "'capability'", "'throughput'", "'kbps'", 
			"'session'", "'maximum'", "'member'", "'ip'", "'address'", "'nat'", "'server'", 
			"'global'", "'inside'", "'reversible'", "'outbound'", "'priority'", "'Bridge-Aggregation'", 
			"'vlan-type'", "'port'", "'link-mode'", "'route'", "'link-aggregation'", 
			"'qos'", "'binding'", "'security-zone'", "'name'", "'import'", "'object-policy'", 
			"'rule'", "'accelerate'", "'zone-pair'", "'security'", "'source'", "'destination'", 
			"' packet-filter'", "'line'", "'class'", "'con'", "'vty'", "'user-role'", 
			"'authentication-mode'", "'idle-timeout'", "'route-static'", "'snmp-agent'", 
			"'redundancy'", "'group'", "'preempt-delay'", "'node'", "'bind'", "'track'", 
			"'acl'", "'basic'", "'advanced'", "'permit'", "'role'", "'level-'", "'network-admin'", 
			"'network-operator'", "'local-user'", "'manage'", "'password'", "'hash'", 
			"'service-type'", "'authorization-attribute'", "'object-group'", "'network'", 
			"'host'", "'subnet'", "'range'", "'eq'", "'!'", "'tcp'", "'udp'", "'icmp'", 
			"'ssh'", "'telnet'", "'http'", "'https'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "INTERFACE", "ROUTEAGGREGATION", 
			"TETHERNET", "METHERNET", "BLADE", "REGEX_IP6", "REGEX_IP_MASK", "REGEX_IP_RANGE", 
			"REGEX_IP_ADDRESS", "REGEX_IP", "INT", "COMMENT", "EOL", "WS", "CJK", 
			"Basic_Latin"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ABT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ABTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ConfigContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitConfig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitConfig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106);
				line();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__64 - 64)) | (1L << (T__65 - 64)) | (1L << (T__66 - 64)) | (1L << (T__67 - 64)) | (1L << (T__68 - 64)) | (1L << (T__69 - 64)) | (1L << (T__70 - 64)) | (1L << (T__71 - 64)) | (1L << (T__72 - 64)) | (1L << (T__73 - 64)) | (1L << (T__74 - 64)) | (1L << (T__75 - 64)) | (1L << (T__76 - 64)) | (1L << (T__77 - 64)) | (1L << (T__78 - 64)) | (1L << (T__79 - 64)) | (1L << (T__80 - 64)) | (1L << (T__81 - 64)) | (1L << (T__82 - 64)) | (1L << (T__83 - 64)) | (1L << (T__84 - 64)) | (1L << (T__85 - 64)) | (1L << (T__86 - 64)) | (1L << (T__87 - 64)) | (1L << (T__88 - 64)) | (1L << (INTERFACE - 64)) | (1L << (ROUTEAGGREGATION - 64)) | (1L << (TETHERNET - 64)) | (1L << (METHERNET - 64)) | (1L << (BLADE - 64)) | (1L << (REGEX_IP6 - 64)) | (1L << (REGEX_IP_MASK - 64)) | (1L << (REGEX_IP_RANGE - 64)) | (1L << (REGEX_IP_ADDRESS - 64)) | (1L << (REGEX_IP - 64)) | (1L << (INT - 64)) | (1L << (COMMENT - 64)) | (1L << (EOL - 64)) | (1L << (WS - 64)) | (1L << (CJK - 64)) | (1L << (Basic_Latin - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public BlankLineContext blankLine() {
			return getRuleContext(BlankLineContext.class,0);
		}
		public CommandLineContext commandLine() {
			return getRuleContext(CommandLineContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				commentLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				blankLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				commandLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentLineContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public CommentLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterCommentLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitCommentLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitCommentLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentLineContext commentLine() throws RecognitionException {
		CommentLineContext _localctx = new CommentLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_commentLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			comment();
			setState(117);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlankLineContext extends ParserRuleContext {
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public BlankLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blankLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterBlankLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitBlankLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitBlankLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlankLineContext blankLine() throws RecognitionException {
		BlankLineContext _localctx = new BlankLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_blankLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(119);
				ws();
				}
				break;
			}
			setState(122);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandLineContext extends ParserRuleContext {
		public KnownCommandContext knownCommand() {
			return getRuleContext(KnownCommandContext.class,0);
		}
		public UnknownCommandContext unknownCommand() {
			return getRuleContext(UnknownCommandContext.class,0);
		}
		public CommandLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterCommandLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitCommandLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitCommandLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandLineContext commandLine() throws RecognitionException {
		CommandLineContext _localctx = new CommandLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_commandLine);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				knownCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				unknownCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KnownCommandContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public ContextRuleContext contextRule() {
			return getRuleContext(ContextRuleContext.class,0);
		}
		public InterfaceRuleContext interfaceRule() {
			return getRuleContext(InterfaceRuleContext.class,0);
		}
		public RouteAggregationRuleContext routeAggregationRule() {
			return getRuleContext(RouteAggregationRuleContext.class,0);
		}
		public EthernetRuleContext ethernetRule() {
			return getRuleContext(EthernetRuleContext.class,0);
		}
		public SecurityZoneRuleContext securityZoneRule() {
			return getRuleContext(SecurityZoneRuleContext.class,0);
		}
		public ZonePairRuleContext zonePairRule() {
			return getRuleContext(ZonePairRuleContext.class,0);
		}
		public LineRuleContext lineRule() {
			return getRuleContext(LineRuleContext.class,0);
		}
		public RouteRuleContext routeRule() {
			return getRuleContext(RouteRuleContext.class,0);
		}
		public SnmpAgentRuleContext snmpAgentRule() {
			return getRuleContext(SnmpAgentRuleContext.class,0);
		}
		public RedundancyRuleContext redundancyRule() {
			return getRuleContext(RedundancyRuleContext.class,0);
		}
		public AclRuleContext aclRule() {
			return getRuleContext(AclRuleContext.class,0);
		}
		public RoleRuleContext roleRule() {
			return getRuleContext(RoleRuleContext.class,0);
		}
		public UserClassRuleContext userClassRule() {
			return getRuleContext(UserClassRuleContext.class,0);
		}
		public SessionRuleContext sessionRule() {
			return getRuleContext(SessionRuleContext.class,0);
		}
		public ObjectGroupRuleContext objectGroupRule() {
			return getRuleContext(ObjectGroupRuleContext.class,0);
		}
		public KnownCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knownCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).enterKnownCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ABTListener ) ((ABTListener)listener).exitKnownCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ABTVisitor ) return ((ABTVisitor<? extends T>)visitor).visitKnownCommand(this);
			else return visitor.visitChildren(this);
		}
	}
